--- a/projects/simonSaidGame/SimonSaid.html
+++ b/projects/simonSaidGame/SimonSaid.html
@@ -12,27 +12,14 @@
   <h1 id="level-title">Press A Key to Start</h1>
   <div class="container">
     <div lass="row">
-
-      <div type="button" id="green" class="btn green">
-
-      </div>
-
-      <div type="button" id="red" class="btn red">
-
-      </div>
+      <div type="button" id="green" class="btn green"></div>
+      <div type="button" id="red" class="btn red"></div>
     </div>
 
     <div class="row">
-
-      <div type="button" id="yellow" class="btn yellow">
-
-      </div>
-      <div type="button" id="blue" class="btn blue">
-
-      </div>
-
+      <div type="button" id="yellow" class="btn yellow"></div>
+      <div type="button" id="blue" class="btn blue"></div>
     </div>
-
   </div>
 
 
