--- a/index.html
+++ b/index.html
@@ -17,27 +17,42 @@
                 </div>
             </div>
 
+            <div class="about-me mb">
+                My journey as a computer science student started with my interest 
+                in coding, which I wanted to pursue to improve my IT skills or get into cybersecurity. 
+                I enrolled in Santa Ana College to learn C++. One day, a friend of mine needed a website 
+                for his restaurant, so I taught myself HTML, CSS, and Javascript to help him out. I then wanted to
+                try game development and created the classic game Tetris using C++ with the Raylib library. 
+                This experience inspired me to create an AI that could play Tetris, which led me to explore 
+                machine learning. I became fascinated with the world of data and machine learning and am now 
+                inspired to become a data scientist and then a machine learning engineer in the future.
+            </div>
+
+
             <div class="one-half column">
                 <div class="links-list">
-                    <h1>Website</h1>
+                    <h1>Projects</h1>
                     <ul>
-                        <li> <a href="projects/car_price_prediction/client/CarPricePrediction.html">Car Price Prediction</a> </li>
-                        <li> <a href="https://phowithme.com/">Pho With Me</a> </li>
+                        <li>
+                            <a href="https://github.com/ki3n98/Portfolio/tree/7db375962e10e466623ea1dbeccc54ad10cef734/projects/car_price_prediction"><img alt="Github icon" src="github.svg"></a>
+                            <a href="projects/car_price_prediction/client/CarPricePrediction.html">ML Model - Car Price Prediction</a> 
+                        </li>
+                        <li>
+                            <a href="https://github.com/ki3n98/PhoWMe.git"><img alt="Github icon" src="github.svg"></a>
+                            <a href="https://phowithme.com/">Website - Pho With Me</a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/ki3n98/Tetris.git"><img alt="Github icon" src="github.svg"></a>
+                            <a href="https://ki3n98.itch.io/tetris">Game - Tetris</a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/ki3n98/Portfolio/tree/7db375962e10e466623ea1dbeccc54ad10cef734/projects/simonSaidGame"><img alt="Github icon" src="github.svg"></a>
+                            <a href="projects/simonSaidGame/SimonSaid.html">Game - Simon Said Game</a>
+                        </li>
                     </ul>
                 </div>
             </div>
-
-            <div class="row">
-                <div class="one-half column">
-                    <div class="links-list">
-                        <h1>Games</h1>
-                        <ul>
-                            <li><a  href="https://ki3n98.itch.io/tetris">Tetris</a></li>
-                            <li><a  href="projects/simonSaidGame/SimonSaid.html">Simon Said Game</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
+    
         </div>
 
 
