update about me

--- a/index.html
+++ b/index.html
@@ -18,14 +18,18 @@
             </div>
 
             <div class="about-me mb">
-                My journey as a computer science student started with my interest 
-                in coding, which I wanted to pursue to improve my IT skills or get into cybersecurity. 
-                I enrolled in Santa Ana College to learn C++. One day, a friend of mine needed a website 
-                for his restaurant, so I taught myself HTML, CSS, and Javascript to help him out. I then wanted to
-                try game development and created the classic game Tetris using C++ with the Raylib library. 
-                This experience inspired me to create an AI that could play Tetris, which led me to explore 
-                machine learning. I became fascinated with the world of data and machine learning and am now 
-                inspired to become a data scientist and then a machine learning engineer in the future.
+                My interest in coding led me to pursue computer science as a student. 
+                Initially, I enrolled in Santa Ana College to learn C++ with a focus 
+                on improving my IT skills and possibly pursuing a career in cybersecurity. 
+                However, an opportunity presented itself when a friend needed a website for
+                his restaurant. I taught myself HTML, CSS, and Javascript to help him out, 
+                and this experience sparked my interest in game development. I created the 
+                classic game Tetris using C++ and the Raylib library. This project 
+                inspired me to create an AI that could play Tetris, which led me to 
+                explore machine learning. As I dived deeper into the world of data and 
+                machine learning, I became fascinated and now aspire to become a data 
+                scientist and eventually a machine learning engineer. Currently, I am 
+                learning Linear Algebra to prepare myself to learn Deep Learning.
             </div>
 
 
